--- a/server/.env
+++ b/server/.env
@@ -5,3 +5,4 @@ CLOUDINARY_CLOUD_NAME=dk57ostu8
 CLOUDINARY_API_KEY=943467491791992
 CLOUDINARY_API_SECRET=prwaZjT79f7LJp6RxdfRqC-Zy0Q
 NODE_ENV=development
+ALLOWED_ORIGIN=https://express-basket.vercel.app
